2004-03-30  Horst Kronstorfer  <horst.kronstorfer@frequentis.com>
 
        * src/sys/kern/uipc_mbuf.c
        * src/ecos/support.c
        * include/sys/mbuf.h: Avoid blocking alloc from (empty) mbuf pool.
        Freed mbufs are never returned to the pool, but to the mbuf
        "free list". This can cause a deadlock situation.
        Duplicated incrementing of mbuf statistics removed.
 
2004-03-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/ecos/support.c (_dumpentry): Don't skip routes which don't
	have a netmask. These are seem to be valid host routes.

2004-02-18  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/freebsd.sgml: Import text from openbsd doc about use of __ECOS
	<network.h>, etc.

2004-01-17  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/sys/kern/sockio.c (bsd_connect): Set the sa_len field in
	the sockaddr structure. Real FreeBSD does this.

2003-12-21  Nick Garnett  <nickg@calivar.com>

	* include/sys/param.h: Restored MD5 function mappings. These were
	accidentally removed earlier.

2003-12-16  Gary Thomas  <gary@mlbassoc.com>

	* cdl/freebsd_net.cdl: Increase default memory pool size to
	include at least enough space to allocate PCBs and SOCKETs.
	Without this, if the number of open files was raised, the
	memory pool was inadequate.

2003-12-10  Gary Thomas  <gary@mlbassoc.com>

	* include/netinet/in.h: Prototype for inet_ntoa_r()

2003-11-22  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/net/if_gif.h include/net/if_sec.h include/net/zlib.h
	include/netinet/ip_ecn.h include/netinet6/ah.h
	include/netinet6/esp.h include/netinet6/esp_rijndael.h
	include/netinet6/esp_twofish.h include/netinet6/in6_gif.h
	include/netinet6/ipcomp.h include/netkey/key.h
	include/netkey/key_debug.h include/netkey/keysock.h src/sys/netkey
	src/sys/netinet/ip_ecn.c src/sys/netinet6/ah_core.c
	src/sys/netinet6/ah_input.c src/sys/netinet6/ah_output.c
	src/sys/netinet6/esp_core.c src/sys/netinet6/esp_input.c